network2 ai upgrades